implemented websocket connection to frontend - improved pkcs11 service

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
     "@nestjs/platform-express": "^6.7.2",
-    "@nestjs/websockets": "^6.10.7",
+    "@nestjs/platform-socket.io": "^6.10.8",
+    "@nestjs/websockets": "^6.10.8",
     "pkcs11js": "^1.0.19",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
