--- a/package.json
+++ b/package.json
@@ -22,10 +22,18 @@
   "dependencies": {
     "@nestjs/common": "^6.7.2",
     "@nestjs/core": "^6.7.2",
+    "@nestjs/jwt": "^6.1.1",
+    "@nestjs/mongoose": "^6.1.2",
+    "@nestjs/passport": "^6.1.1",
     "@nestjs/platform-express": "^6.7.2",
     "@nestjs/platform-socket.io": "^6.10.8",
     "@nestjs/websockets": "^6.10.8",
     "axios": "^0.19.0",
+    "bcrypt": "^3.0.7",
+    "mongoose": "^5.8.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
     "pkcs11js": "^1.0.19",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.0",
@@ -39,6 +47,7 @@
     "@types/express": "^4.17.1",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
+    "@types/passport-local": "^1.0.33",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
