--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@nestjs/websockets": "^6.10.8",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
+    "moment": "^2.24.0",
     "mongoose": "^5.8.0",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
