--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "@nestjs/websockets": "^6.10.8",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
+    "class-transformer": "^0.2.3",
+    "class-validator": "^0.11.0",
     "moment": "^2.24.0",
     "mongoose": "^5.8.0",
     "passport": "^0.4.1",
