--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "jsonwebtoken": "^8.5.1",
     "moment": "^2.24.0",
     "mongoose": "^5.8.0",
     "passport": "^0.4.1",
@@ -53,6 +54,7 @@
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.5",
     "@types/passport-local": "^1.0.33",
+    "@types/socket.io": "^2.1.4",
     "@types/supertest": "^2.0.8",
     "jest": "^24.9.0",
     "prettier": "^1.18.2",
