--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "swagger-ui-express": "^4.1.2"
   },
   "devDependencies": {
+    "@compodoc/compodoc": "^1.1.11",
     "@nestjs/cli": "^6.9.0",
     "@nestjs/schematics": "^6.7.0",
     "@nestjs/testing": "^6.7.1",
