--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/platform-socket.io": "^6.10.8",
     "@nestjs/swagger": "^4.0.9",
     "@nestjs/websockets": "^6.10.8",
+    "activedirectory": "^0.7.2",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.7",
     "class-transformer": "^0.2.3",
