--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "rimraf": "^3.0.0",
     "rxjs": "^6.5.3",
     "smartcard": "^1.0.32",
-    "swagger-ui-express": "^4.1.2"
+    "swagger-ui-express": "^4.1.2",
+    "uuid": "^3.4.0"
   },
   "devDependencies": {
     "@compodoc/compodoc": "^1.1.11",
